<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_simulations</name>
  <version>0.0.0</version>
  <description>Package with simulations for ROS 2</description>
  <maintainer email="irenebanderam@gmail.com">Irene Bandera</maintainer>
  <license file="LICENSE">Apache 2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>rosbot_xl_description</exec_depend>
  <exec_depend>rosbot_xl_bringup</exec_depend>
  <exec_depend>husarion_office_gz</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>webots_ros2_husarion</exec_depend>

  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
